welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: value += is not a member of Int
				j+=1
                                 ^Poucet:13: error: missing parameter type
			if (i=>3) {
                            ^